--- a/src/main/resources/templates/rental_management/RentalPage.html
+++ b/src/main/resources/templates/rental_management/RentalPage.html
@@ -6,5 +6,25 @@
 </head>
 <body>
 
+    <form action="renting" method="post">
+        <input type="submit" value="MovieRenting"/>
+    </form>
+    <form action="" method="post">
+        <input type="submit" value="MovieReturn"/>
+    </form>
+
+    <form action="" method="post">
+        <input type="submit" value="Show available movies"/>
+    </form>
+    <form action="" method="post">
+        <input type="submit" value="Show movies that are not returned"/>
+    </form>
+    <form action="" method="post">
+        <input type="submit" value="Show overdue movies"/>
+    </form>
+    <form action="goBack" method="post">
+        <input type="submit" value="Go back to start"/>
+    </form>
+
 </body>
 </html>
