--- a/src/main/resources/templates/customer_management/CustomerList.html
+++ b/src/main/resources/templates/customer_management/CustomerList.html
@@ -5,10 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-    <div th:each="customer:${customers}">
-        <p th:text="${customer.socialSecurityNumber}+', '+${customer.name}+', '+${customer.address}+', '+${customer.postalCode}+
-            ', '+${customer.city}+', '+${customer.country}+', '+${customer.phone}+', '+${customer.email}"></p>
-    </div>
+    <th:block th:each="customer:${customers}">
+        <tr>
+            <td th:text="${customer.socialSecurityNumber}"></td>
+            <td th:text="${customer.name}"></td>
+            <td th:text="${customer.address}"></td>
+            <td th:text="${customer.postalCode}"></td>
+            <td th:text="${customer.city}"></td>
+            <td th:text="${customer.country}"></td>
+            <td th:text="${customer.phone}"></td>
+            <td th:text="${customer.email}"></td>
+        </tr><br/>
+    </th:block>
     <form action="goBack" method="post">
         <input type="submit" value="Go back to start"/>
     </form>
