--- a/src/main/resources/templates/video_management/MovieList.html
+++ b/src/main/resources/templates/video_management/MovieList.html
@@ -5,10 +5,17 @@
     <title>Movies</title>
 </head>
 <body>
-    <div th:each="movie:${movies}">
-        <p th:text="${movie.movieId}+', '+${movie.name}+', '+${movie.description}+', '+${movie.releaseDate}+
-            ', '+${movie.category}+', '+${movie.movieFormat}+', '+${movie.available}"></p>
-    </div>
+    <th:block th:each="movie:${movies}">
+        <tr>
+            <td th:text="${movie.movieId}"></td>
+            <td th:text="${movie.name}"></td>
+            <td th:text="${movie.description}"></td>
+            <td th:text="${movie.releaseDate}"></td>
+            <td th:text="${movie.category}"></td>
+            <td th:text="${movie.movieFormat}"></td>
+            <td th:text="${movie.available}"></td>
+        </tr><br/>
+    </th:block>
     <form action="goBack" method="post">
         <input type="submit" value="Go back to start"/>
     </form>
