--- a/src/main/resources/templates/rental_management/RentalPage.html
+++ b/src/main/resources/templates/rental_management/RentalPage.html
@@ -9,18 +9,23 @@
     <form action="renting" method="post">
         <input type="submit" value="MovieRenting"/>
     </form>
-    <form action="" method="post">
+    <form action="movieReturn" method="post">
         <input type="submit" value="MovieReturn"/>
     </form>
 
-    <form action="" method="post">
+    <form action="availableMovies" method="post">
         <input type="submit" value="Show available movies"/>
     </form>
-    <form action="" method="post">
+    <form action="notReturned" method="post">
         <input type="submit" value="Show movies that are not returned"/>
     </form>
-    <form action="" method="post">
+    <form action="overdueMovies" method="post">
         <input type="submit" value="Show overdue movies"/>
+    </form>
+    <form action="customerHistory" method="post">
+        <p>Enter customers social security number</p>
+        <input type="text" name="socialSecurityNumber"/>
+        <input type="submit" value="Show history"/>
     </form>
     <form action="goBack" method="post">
         <input type="submit" value="Go back to start"/>
