--- a/src/main/resources/templates/video_management/MoviePage.html
+++ b/src/main/resources/templates/video_management/MoviePage.html
@@ -15,6 +15,16 @@
     <form action="showMovieList" method="post">
         <input type="submit" value="Show all movies"/>
     </form>
+    <form action="findByName" method="post">
+        <p>Enter movie name:</p>
+        <input type="text" name="movieName"/>
+        <input type="submit" value="Search movies by name"/>
+    </form>
+    <form action="findByCategory" method="post">
+        <p>Enter category</p>
+        <input type="text" name="movieCategory"/>
+        <input type="submit" value="Search movies by category"/>
+    </form>
     <form action="goBack" method="post">
         <input type="submit" value="Go back to start"/>
     </form>
