--- a/src/main/resources/templates/customer_management/EnterCustomerData.html
+++ b/src/main/resources/templates/customer_management/EnterCustomerData.html
@@ -7,13 +7,21 @@
 <body>
     <form action="addCustomer" method="post" th:object="${customerDataForm}">
         <p>Name<input type="text" name="name" th:field="*{name}"/> </p>
+        <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></p>
         <p>Address<input type="text" name="address" th:field="*{address}"/></p>
+        <p th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
         <p>Postal code<input type="text" name="postalCode" th:field="*{postalCode}"/></p>
+        <p th:if="${#fields.hasErrors('postalCode')}" th:errors="*{postalCode}"></p>
         <p>City<input type="text" name="city" th:field="*{city}"/> </p>
+        <p th:if="${#fields.hasErrors('city')}" th:errors="*{city}"></p>
         <p>Country<input type="text" name="country" th:field="*{country}"/></p>
+        <p th:if="${#fields.hasErrors('country')}" th:errors="*{country}"></p>
         <p>Phone<input type="text" name="phone" th:field="*{phone}"/></p>
+        <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
         <p>Email<input type="text" name="email" th:field="*{email}"/> </p>
+        <p th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></p>
         <p>Social security number<input type="text" name="socialSecurityNumber" th:field="*{socialSecurityNumber}"/></p>
+        <p th:if="${#fields.hasErrors('socialSecurityNumber')}" th:errors="*{socialSecurityNumber}"></p>
         <input type="submit" value="Enter"/>
     </form>
 
