login and mapper

--- a/src/main/resources/templates/customer_management/CustomerList.html
+++ b/src/main/resources/templates/customer_management/CustomerList.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../../Style.css" type="text/css">
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1>Customers</h1>
     <tr>
         <td>Social security number</td>
