--- a/src/main/resources/templates/rental_management/RentalList.html
+++ b/src/main/resources/templates/rental_management/RentalList.html
@@ -5,6 +5,7 @@
     <title>Rental</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1 th:text="${title}"></h1>
     <tr>
         <th>Rental date</th>
