--- a/src/main/resources/templates/rental_management/ReturnMovies.html
+++ b/src/main/resources/templates/rental_management/ReturnMovies.html
@@ -5,6 +5,7 @@
     <title>Return</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1>Return movies</h1>
 
     <form action="findRentedMovies" method="post">
