--- a/src/main/resources/templates/video_management/MovieList.html
+++ b/src/main/resources/templates/video_management/MovieList.html
@@ -5,6 +5,7 @@
     <title>Movies</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1 th:text="${title}"></h1>
     <tr>
         <td>Movie Id</td>
