--- a/src/main/resources/templates/video_management/ShowMovieData.html
+++ b/src/main/resources/templates/video_management/ShowMovieData.html
@@ -5,6 +5,7 @@
     <title>MovieData</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <p th:text="'MovieId: '+${movie.movieId}"></p>
     <p th:text="'Name: '+${movie.name}"></p>
     <p th:text="'Description: '+${movie.description}"></p>
