--- a/src/main/resources/templates/customer_management/CustomersPage.html
+++ b/src/main/resources/templates/customer_management/CustomersPage.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Customer data</title>
+    <link rel="stylesheet" href="../../Style.css" type="text/css">
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1>Manage customer data</h1>
     <form action="customerData" method="post">
         <input type="submit" value="Enter new customer"/>
