--- a/src/main/resources/templates/login_management/StartPage.html
+++ b/src/main/resources/templates/login_management/StartPage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1>Choose category</h1>
 
     <form action="customersPage" method="post">
@@ -15,6 +16,9 @@
     </form>
     <form action="rentalPage" method="post">
         <input type="submit" value="Rental"/>
+    </form>
+    <form action="logOut" method="post">
+        <input type="submit" value="Log out"/>
     </form>
 
 </body>
