--- a/src/main/resources/templates/rental_management/RentAgain.html
+++ b/src/main/resources/templates/rental_management/RentAgain.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <p th:text="'Customer: '+${rentalId.socialSecurityNumber}"></p>
     <p th:text="'Movie: '+${rentalId.movieId}"></p>
     <p th:text="'Rental date: '+${rentalId.rentalDate}"></p>
