--- a/src/main/resources/templates/rental_management/RentalPage.html
+++ b/src/main/resources/templates/rental_management/RentalPage.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
 
     <form action="renting" method="post">
         <input type="submit" value="MovieRenting"/>
