--- a/src/main/resources/templates/video_management/EnterMovieData.html
+++ b/src/main/resources/templates/video_management/EnterMovieData.html
@@ -5,6 +5,7 @@
     <title>Movie</title>
 </head>
 <body>
+    <h3 th:text="'Logged in as ' + ${username} "></h3>
     <h1>Enter movie data:</h1>
     <form action="addMovie" method="post" th:object="${movieDataForm}">
         <p>Name:<input type="text" name="name" th:field="*{name}"/></p>
