current movies method

--- a/src/main/resources/templates/rental_management/RentalPage.html
+++ b/src/main/resources/templates/rental_management/RentalPage.html
@@ -23,6 +23,11 @@
     <form action="overdueMovies" method="post">
         <input type="submit" value="Show overdue movies"/>
     </form>
+    <form action="customersCurrentMovies" method="post">
+        <p>Enter customers social security number</p>
+        <input type="text" name="socialSecurityNumber"/>
+        <input type="submit" value="Show customers current movies"/>
+    </form>
     <form action="customerHistory" method="post">
         <p>Enter customers social security number</p>
         <input type="text" name="socialSecurityNumber"/>
