--- a/src/main/resources/templates/customer_management/CustomerList.html
+++ b/src/main/resources/templates/customer_management/CustomerList.html
@@ -40,8 +40,7 @@
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" th:href="@{/showMovieList}">Show All</a>
                             <a class="dropdown-item" th:href="@{/availableMovies}">Show Available Movies</a>
-                            <a class="dropdown-item" th:href="@{/findByName}">Find Movies by name</a>
-                            <a class="dropdown-item" th:href="@{/findByCategory}">Find Movies by category</a>
+                            <a class="dropdown-item" th:href="@{/findMovie}">Find Movie</a>
                             <a class="dropdown-item" th:href="@{/movieData}">Add Movie</a>
                             <a class="dropdown-item" th:href="@{/deleteMovie}">Delete Movie</a>
 
@@ -52,8 +51,12 @@
                             Renting options
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" th:href="@{/movie/rent}">Rent</a>
-                            <a class="dropdown-item" th:href="@{/movie/return}">Return</a>
+                            <a class="dropdown-item" th:href="@{/renting}">Rent</a>
+                            <a class="dropdown-item" th:href="@{/movieReturn}">Return</a>
+                            <a class="dropdown-item" th:href="@{/notReturned}">Show Rented Movies</a>
+                            <a class="dropdown-item" th:href="@{/overdueMovies}">Show Overdue Movies</a>
+                            <a class="dropdown-item" th:href="@{/}">Show Customers Current Movies</a>
+                            <a class="dropdown-item" th:href="@{/}">Show Customers Rent History</a>
                         </div>
                 </ul>
 
