--- a/src/main/resources/templates/customer_management/EnterCustomerData.html
+++ b/src/main/resources/templates/customer_management/EnterCustomerData.html
@@ -40,8 +40,7 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" th:href="@{/showMovieList}">Show All</a>
                         <a class="dropdown-item" th:href="@{/availableMovies}">Show Available Movies</a>
-                        <a class="dropdown-item" th:href="@{/findByName}">Find Movies by name</a>
-                        <a class="dropdown-item" th:href="@{/findByCategory}">Find Movies by category</a>
+                        <a class="dropdown-item" th:href="@{/findMovie}">Find Movie</a>
                         <a class="dropdown-item" th:href="@{/movieData}">Add Movie</a>
                         <a class="dropdown-item" th:href="@{/deleteMovie}">Delete Movie</a>
 
