--- a/src/main/resources/templates/customer_management/CustomerList.html
+++ b/src/main/resources/templates/customer_management/CustomerList.html
@@ -55,8 +55,7 @@
                             <a class="dropdown-item" th:href="@{/movieReturn}">Return</a>
                             <a class="dropdown-item" th:href="@{/notReturned}">Show Rented Movies</a>
                             <a class="dropdown-item" th:href="@{/overdueMovies}">Show Overdue Movies</a>
-                            <a class="dropdown-item" th:href="@{/}">Show Customers Current Movies</a>
-                            <a class="dropdown-item" th:href="@{/}">Show Customers Rent History</a>
+                            <a class="dropdown-item" th:href="@{/rentalPage}">Show Customers Movies</a>
                         </div>
                 </ul>
 
