--- a/src/main/resources/templates/rental_management/Rented.html
+++ b/src/main/resources/templates/rental_management/Rented.html
@@ -51,8 +51,11 @@
                         Renting options
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" th:href="@{/movie/rent}">Rent</a>
-                        <a class="dropdown-item" th:href="@{/movie/return}">Return</a>
+                        <a class="dropdown-item" th:href="@{/renting}">Rent</a>
+                        <a class="dropdown-item" th:href="@{/movieReturn}">Return</a>
+                        <a class="dropdown-item" th:href="@{/notReturned}">Show Rented Movies</a>
+                        <a class="dropdown-item" th:href="@{/overdueMovies}">Show Overdue Movies</a>
+                        <a class="dropdown-item" th:href="@{/rentalPage}">Show Customers Movies</a>
                     </div>
             </ul>
 
@@ -69,9 +72,7 @@
     <p th:text="'Movie: '+${rentalId.movieId}"></p>
     <p th:text="'Rental date: '+${rentalId.rentalDate}"></p>
 
-    <form action="renting" method="post">
-        <input type="submit" value="Rent another movie"/>
-    </form>
+    <p>Rented!</p>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
